# PhdSnippets

./: .gitignore  CMakeLists.txt  README.md
ImgCompression/: CMakeLists.txt
ImgCompression/data/: .gitignore
ImgCompression/include/: AsyncFrameListener.hpp  CameraFrameGraphicsView.hpp  CompressionAlgorithmTypes.hpp  HEVCVideoEncoder.hpp  INetworkClient.hpp  INetworkServer.hpp  IVideoEncoder.hpp  IVideoSource.hpp  Logger.hpp  MainWindow.hpp  MsgHeader.hpp  ROI.hpp  SemanticCompression.hpp  UDPClient.hpp  UDPServer.hpp  UnderwaterRobot.hpp  x264VideoEncoder.hpp
ImgCompression/src/: AsyncFrameListener.cpp  CameraFrameGraphicsView.cpp  HEVCVideoEncoder.cpp  Logger.cpp  MainWindow.cpp  ROI.cpp  SemanticCompression.cpp  UDPClient.cpp  UDPServer.cpp  UnderwaterRobot.cpp  frames_source.cpp  gui.cpp  main.cpp  mainwindow.ui  x264VideoEncoder.cpp
ImgCompressionTest/: CMakeLists.txt
ImgCompressionTest/include/: FramesFromDir.hpp  IVideoEncoder.hpp  x264VideoEncoder.hpp
ImgCompressionTest/src/: FramesFromDir.cpp  main.cpp
VolleyballPlayersList/: CMakeLists.txt
VolleyballPlayersList/data/: generateFrom.json  players.json
VolleyballPlayersList/src/: main.cpp
tests/: CMakeLists.txt  IClock.hpp
tests/ImgCompressionTests/: AsyncFrameListenerMock.hpp  AsyncWorkerTests.cpp  CMakeLists.txt  MainWindowTests.cpp  NetworkClientMock.hpp  NetworkTests.cpp  Reproduction.cpp  main.cpp
